--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/000.png" alt="Vini Profile Picture"> <!-- tbm da certo <img src="https://pbs.twimg.com/profile_images/976498950684409856/jmiWhOzX_400x400.jpg" alt="Vini Profile Picture"> -->
+      <td><img src="images/0.png" alt="Vini's Profile Picture"> <!-- tbm da certo <img src="https://pbs.twimg.com/profile_images/976498950684409856/jmiWhOzX_400x400.jpg" alt="Vini Profile Picture"> -->
       </td>
       <td>
         <h1>Vini Silva</h1>
